--- a/en/faq.html
+++ b/en/faq.html
@@ -26,10 +26,10 @@
         Vietnamese Christians Fellowship Conference in Australia – Melbourne 2016
     </title>
 
-    <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
-    <script src="js/modernizr-2.6.2.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="/js/bootstrap.js" type="text/javascript"></script>
+    <script src="/js/modernizr-2.6.2.js"></script>
+    <script src="/js/app.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -72,21 +72,21 @@
                     </div>
                 </div>
             </div>
+            <div class="jumbotron banner2">
+                    <div class="container body-content">
+                        <div>
+                            <h1>Preparing for the Lord’s Return</h1>
+                            <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
+                            <cite>
+                                I Thessalonians 3:13
+                            </cite>
+
+                            <p>&nbsp;</p>
+                            <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large ">Register Now &raquo;</a></p>                 
+                        </div>
+                    </div>
+            </div>
             <div class="container body-content">
-
-
-                <div>&nbsp;</div>
-                <div class="jumbotron banner">
-                    <h1>Preparing for the Lord’s Return</h1>
-                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
-                    <cite>
-                        I Thessalonians 3:13
-                    </cite>
-
-                        <p>&nbsp;</p>
-                        <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large ">Register Now &raquo;</a></p>
-                </div>
-
 
                 <div>
 
@@ -139,7 +139,7 @@
         </div>
         <div class="container-fluid1" style="background: #333; color:white;">
             <div class="container" style="padding: 20px 10px;">
-                <p style="text-align:center;">&copy; 2016 | Vietnamese Christian Fellowship Conference in Australia - Melbourne 2016</p>
+                <p style="text-align:center;">&copy; 2016 | Vietnamese Christians Fellowship Conference in Australia - Melbourne 2016</p>
             </div>
         </div>     
         <!-- END FOOTER -->       
