--- a/en/files.html
+++ b/en/files.html
@@ -77,22 +77,21 @@
                     </div>
                 </div>
             </div>
+            <div class="jumbotron banner2">
+                    <div class="container body-content">
+                        <div>
+                            <h1>Preparing for the Lord’s Return</h1>
+                            <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
+                            <cite>
+                                I Thessalonians 3:13
+                            </cite>
+
+                            <p>&nbsp;</p>
+                            <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large ">Register Now &raquo;</a></p>                 
+                        </div>
+                    </div>
+            </div>
             <div class="container body-content">
-
-
-                <div>&nbsp;</div>
-                <div class="jumbotron banner">
-                    <h1>Preparing for the Lord’s Return</h1>
-                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
-                    <cite>
-                        I Thessalonians 3:13
-                    </cite>
-
-                        <p>&nbsp;</p>
-                        <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large ">Register Now &raquo;</a></p>
-                </div>
-
-
                 <div>
 
                     <h2>Files</h2>
@@ -102,7 +101,7 @@
 
      <ul id="files-download">
                     
-                    <li><a href="/files/ThuMoiDHV.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Invitation letter - Vietnamese (English version coming soon)</a></li>
+                    <li><a href="/files/ThuMoiDHeng.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Invitation letter</a></li>
                     <li><a href="/files/ThongTinDH.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Information - Vietnamese (English version coming soon)</a></li>
                     <li><a href="/files/ConferencePoster.zip" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Poster</a></li>
                     <li><a href="/files/BibleQuizPoster.jpg" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Bible Quiz Poster </a></li>
