--- a/en/index.html
+++ b/en/index.html
@@ -75,20 +75,21 @@
                     </div>
                 </div>
             </div>
+            <div class="jumbotron banner2">
+                    <div class="container body-content">
+                        <div>
+                            <h1>Preparing for the Lord’s Return</h1>
+                            <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
+                            <cite>
+                                I Thessalonians 3:13
+                            </cite>
+
+                            <p>&nbsp;</p>
+                            <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large ">Register Now &raquo;</a></p>                 
+                        </div>
+                    </div>
+            </div>
             <div class="container body-content">
-
-
-                <div>&nbsp;</div>
-                <div class="jumbotron banner">
-                    <h1>Preparing for the Lord’s Return</h1>
-                    <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
-                    <cite>
-                        I Thessalonians 3:13
-                    </cite>
-
-                        <p>&nbsp;</p>
-                        <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large ">Register Now &raquo;</a></p>
-                </div>
 
 
                 <div>
