--- a/faq.html
+++ b/faq.html
@@ -92,31 +92,28 @@
                     </div>
                 </div>
             </div>
+            <div class="jumbotron banner2">
+                    <div class="container body-content">
+                        <div>
+                            <h1> 
+                               Chuẩn Bị Nghênh Đón Chúa
+                            </h1>
+                            <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
+                            <cite>
+                                I Tê-sa-lô-ni-ca 3:13
+                            </cite>
+
+                                <p>&nbsp;</p>
+                                <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
+                        </div>
+                    </div>
+            </div>
             <div class="container body-content">
-
-
-                <div>&nbsp;</div>
-                <div class="jumbotron banner">
-                    <h1> 
-                       Chuẩn Bị Nghênh Đón Chúa
-                    </h1>
-                    <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
-                    <cite>
-                        I Tê-sa-lô-ni-ca 3:13
-                    </cite>
-
-                        <p>&nbsp;</p>
-                        <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
-                </div>
-
 
                 <div class="container" id="faq">
 
 
                 <div class="panel-group" id="accordion">
-
-
-
 
                     <h2>Giải đáp thắc mắc</h2>
 
@@ -740,7 +737,7 @@
         </div>
         <div class="container-fluid1" style="background: #333; color:white;">
             <div class="container" style="padding: 20px 10px;">
-                <p style="text-align:center;">&copy; 2016 | Vietnamese Christian Fellowship Conference in Australia - Melbourne 2016</p>
+                <p style="text-align:center;">&copy; 2016 | Vietnamese Christians Fellowship Conference in Australia - Melbourne 2016</p>
             </div>
         </div>     
         <!-- END FOOTER -->    
