--- a/files.html
+++ b/files.html
@@ -80,32 +80,29 @@
                     </div>
                 </div>
             </div>
+            <div class="jumbotron banner2">
+                    <div class="container body-content">
+                        <div>
+                            <h1> 
+                               Chuẩn Bị Nghênh Đón Chúa
+                            </h1>
+                            <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
+                            <cite>
+                                I Tê-sa-lô-ni-ca 3:13
+                            </cite>
+
+                                <p>&nbsp;</p>
+                                <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
+                        </div>
+                    </div>
+            </div>
             <div class="container body-content">
-
-
-                <div>&nbsp;</div>
-                <div class="jumbotron banner">
-                    <h1> 
-                       Chuẩn Bị Nghênh Đón Chúa
-                    </h1>
-                    <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
-                    <cite>
-                        I Tê-sa-lô-ni-ca 3:13
-                    </cite>
-
-                        <p>&nbsp;</p>
-                        <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
-                </div>
-
 
                 <div class="container question-answer">
 
                     <h2> Tải về</h2>
                     
                     <p>Quý vị có thể tải các tài liệu bên dưới về để dùng theo nhu cầu:</p>
-
-
-
 
 
                    <ul id="files-download">
