--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <link id="css" href="css/bootstrap.css" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet" />
-        <link href="css/app.css?v3" rel="stylesheet" />
+        <link href="css/app.css?v=8" rel="stylesheet" />
         <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     </head>
@@ -72,23 +72,23 @@
                     </div>
                 </div>
             </div>
+            <div class="jumbotron banner2">
+                    <div class="container body-content">
+                        <div>
+                            <h1> 
+                               Chuẩn Bị Nghênh Đón Chúa
+                            </h1>
+                            <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
+                            <cite>
+                                I Tê-sa-lô-ni-ca 3:13
+                            </cite>
+
+                                <p>&nbsp;</p>
+                                <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
+                        </div>
+                    </div>
+            </div>            
             <div class="container body-content">
-
-
-                <div>&nbsp;</div>
-                <div class="jumbotron banner">
-                    <h1> 
-                       Chuẩn Bị Nghênh Đón Chúa
-                    </h1>
-                    <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
-                    <cite>
-                        I Tê-sa-lô-ni-ca 3:13
-                    </cite>
-
-                        <p>&nbsp;</p>
-                        <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
-                </div>
-
 
                 <div>
 
