--- a/organiser.html
+++ b/organiser.html
@@ -73,23 +73,23 @@
                     </div>
                 </div>
             </div>
+            <div class="jumbotron banner2">
+                    <div class="container body-content">
+                        <div>
+                            <h1> 
+                               Chuẩn Bị Nghênh Đón Chúa
+                            </h1>
+                            <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
+                            <cite>
+                                I Tê-sa-lô-ni-ca 3:13
+                            </cite>
+
+                                <p>&nbsp;</p>
+                                <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
+                        </div>
+                    </div>
+            </div>            
             <div class="container body-content">
-
-
-                <div>&nbsp;</div>
-                <div class="jumbotron banner">
-                    <h1> 
-                       Chuẩn Bị Nghênh Đón Chúa
-                    </h1>
-                    <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
-                    <cite>
-                        I Tê-sa-lô-ni-ca 3:13
-                    </cite>
-
-                        <p>&nbsp;</p>
-                        <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
-                </div>
-
 
                 <div class="container organiser">
                     <h2>Ban tổ chức</h2>
@@ -108,8 +108,7 @@
                     <h4>Thành Phần Ban Tổ chức</h4>
                     <h5>BAN CỐ VẤN</h5>
                     <ul>
-                        <li>MS Nguyễn Hùng Vương (NSW Baptist), MS Ngô Minh Quang (VIC VECA), MS Nguyễn Xuân Đức (USA Baptist) 
-</li>
+                        <li>MS Nguyễn Hùng Vương (NSW Baptist), MS Ngô Minh Quang (VIC VECA), MS Nguyễn Xuân Đức (USA Baptist) </li>
                         
                     </ul>
                    <h5>BAN TỔ CHỨC THƯỜNG TRỰC:</h5>
