--- a/en/faq.html
+++ b/en/faq.html
@@ -29,21 +29,22 @@
     <script src="/js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="/js/bootstrap.js" type="text/javascript"></script>
     <script src="/js/modernizr-2.6.2.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="/js/banner.js?v2"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.js"></script>
+      <script src="/js/html5shiv.js"></script>
+      <script src="/js/respond.js"></script>
     <![endif]-->
 
-        <link id="css" href="../css/bootstrap.css" rel="stylesheet" />
-        <link href="../css/site.css" rel="stylesheet" />
-        <link href="../css/app.css" rel="stylesheet" />
-        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="/css/bootstrap.css?v=1"  rel="stylesheet" id="css" />
+    <link href="/css/site.css"           rel="stylesheet" />
+    <link href="/css/app.css?v=11"       rel="stylesheet" />
+    <link href="/css/animate.css?v=1"    rel="stylesheet" />
+    <link href="/favicon.ico"            rel="shortcut icon" type="image/x-icon" />
 
-    </head>
-    <body>
+</head>
+<body>
 
             <div class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container">
@@ -72,20 +73,18 @@
                     </div>
                 </div>
             </div>
-            <div class="jumbotron banner2">
-                    <div class="container body-content">
-                        <div>
-                            <h1>Preparing for the Lord’s Return</h1>
-                            <p class="lead">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones</p>
-                            <cite>
-                                I Thessalonians 3:13
-                            </cite>
-
-                            <p>&nbsp;</p>
-                            <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large ">Register Now &raquo;</a></p>                 
-                        </div>
-                    </div>
+            <div id="header-image">
+                <img src="/img/banner/bg.jpg"           class="center-block img-responsive banner-image">
+                <img src="/img/banner/title.en.png"     class="bounceInDown animated center-block img-responsive main-title en" >
+                <img src="/img/banner/circle350.jpg"    class="img-responsive img-circle banner-logo" style="opacity: 0.5;">
+                <img src="/img/banner/logo350.png"      class="img-responsive img-circle banner-logo">
             </div>
+            <div class="memory-verse-wrapper">
+                <div class="container text-center" style="padding: 10px;">
+                    <p class="lead" id="memory-verse">May he strengthen your hearts so that you will be blamless and holy in the presence of our God and Father when our Lord Jesus comes with all his holy ones.</p>
+                    <cite>I Thessalonians 3:13</cite>
+                </div>
+            </div>                 
             <div class="container body-content">
 
                 <div>
