--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/modernizr-2.6.2.js"></script>
+    <script src="/js/banner.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -37,13 +38,13 @@
       <script src="js/respond.js"></script>
     <![endif]-->
 
-        <link id="css" href="css/bootstrap.css" rel="stylesheet" />
-        <link href="css/site.css" rel="stylesheet" />
-        <link href="css/app.css?v=8" rel="stylesheet" />
-        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
-    </head>
-    <body>
+    <link href="css/bootstrap.css?v=1"  rel="stylesheet" id="css" />
+    <link href="css/site.css"           rel="stylesheet" />
+    <link href="css/app.css?v=11"        rel="stylesheet" />
+    <link href="css/animate.css?v=1"    rel="stylesheet" />
+    <link href="favicon.ico"            rel="shortcut icon" type="image/x-icon" />
+</head>
+<body>
 
             <div class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container">
@@ -72,24 +73,20 @@
                     </div>
                 </div>
             </div>
-            <div class="jumbotron banner2">
-                    <div class="container body-content">
-                        <div>
-                            <h1> 
-                               Chuẩn Bị Nghênh Đón Chúa
-                            </h1>
-                            <p class="lead">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
-                            <cite>
-                                I Tê-sa-lô-ni-ca 3:13
-                            </cite>
-
-                                <p>&nbsp;</p>
-                                <p style="text-align:right;"><a href="/register" class="btn btn-primary btn-large">Đăng ký &raquo;</a></p>
-                        </div>
-                    </div>
+           
+            <div id="header-image">
+                <img src="/img/banner/bg.jpg"           class="center-block img-responsive banner-image">
+                <img src="/img/banner/title1.png"       class="bounceInDown animated center-block img-responsive main-title" >
+                <img src="/img/banner/circle350.jpg"    class="img-responsive img-circle banner-logo" style="opacity: 0.5;">
+                <img src="/img/banner/logo350.png"      class="img-responsive img-circle banner-logo">
+            </div>
+            <div class="memory-verse-wrapper">
+                <div class="container text-center" style="padding: 10px;">
+                    <p class="lead" id="memory-verse">Hầu cho lòng anh em được vững vàng, và thánh sạch không trách được trước mặt Đức Chúa Trời, là Cha chúng ta, khi Đức Chúa Jêsus chúng ta sẽ đến với hết thảy thánh đồ Ngài!</p>
+                    <cite>I Tê-sa-lô-ni-ca 3:13</cite>
+                </div>
             </div>            
             <div class="container body-content">
-
                 <div>
 
                     <h2>Đại Hội Liên Hữu Tin Lành Úc Châu V - Melbourne 2016</h2>
