--- a/en/files.html
+++ b/en/files.html
@@ -107,7 +107,7 @@
                     <li><a href="/files/ConferencePoster.zip" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Poster</a></li>
                     <li><a href="/files/BibleQuizPoster.jpg" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Conference Bible Quiz Poster </a></li>
                     <li><a href="/files/Conference2016RegistrationForm.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Paper Registration Form</a></li>
-
+                <li><a href="/files/biblequiz.zip" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Bible Quiz details and examples</a></li>
                    </ul>
                 </div>
 
