--- a/files.html
+++ b/files.html
@@ -72,7 +72,7 @@
                             <li><a href="/organiser.html">Ban Tổ Chức</a></li>
                             <li><a href="/faq.html">Giải Đáp Thắc Mắc</a></li>
                             <li><a href="/files.html">Tải về</a></li>
-                           
+                            <li><a href="/sponsors.html">Sponsors</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right hidden">
@@ -114,7 +114,7 @@
                     <li><a href="/files/RegistrationForm2016_VIET.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Đơn ghi danh</a></li>
 
                 <li><a href="/files/ThongTinNK.pdf" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Thông tin Ngợi Khen</a></li>
-
+                <li><a href="/files/biblequiz.zip" target="_blank"><i class="glyphicon glyphicon-download-alt" aria-hidden="true"></i> Chi tiết Đố Kinh Thánh và câu đố mẫu</a></li>
                    </ul>
 
                     </div>
