--- a/organiser.html
+++ b/organiser.html
@@ -66,6 +66,7 @@
                             <li><a href="/organiser.html">Ban Tổ Chức</a></li>
                             <li><a href="/faq.html">Giải Đáp Thắc Mắc</a></li>
                             <li><a href="/files.html">Tải về</a></li>
+                            <li><a href="/sponsors.html">Sponsors</a></li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right hidden">
